added more components

--- a/src/app/home/headline/headline.component.html
+++ b/src/app/home/headline/headline.component.html
@@ -1,10 +1,10 @@
-<section class="module-header full-height parallax bg-dark bg-dark-30 text-left" id="home" data-background="assets/images/module-1.jpg">
+<section class="module-header full-height parallax bg-dark text-center bg-gradient" id="home" >
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h1 class="h1 m-b-15">Simon <br/> Rowe</h1>
-        <h1 class="h6 m-b-60">Agile Software Developer <br />Utilising Java, Spring, Angular & AWS <br />to architect and deliver enterprise software solutions</h1>
-        <p><a class="btn btn-brand" href="#"><span>Download resume</span></a></p>
+        <h1 class="h1 m-b-15 ">Simon<br/> Rowe</h1>
+        <h1 class="h6 m-b-40">Visual designer & Front-end developer</h1>
+        <p class="m-b-80"><a class="btn btn-brand" href="#"><span>Download resume</span></a></p><img src="assets/images/iphone-5.png" alt="">
       </div>
     </div>
   </div>
