--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,5 +1,15 @@
+<div class="page-loader">
+  <div class="cssload-container">
+    <div class="cssload-whirlpool"></div>
+  </div>
+</div>
+
 <app-header></app-header>
 <div class="wrapper">
   <app-headline></app-headline>
   <app-profile></app-profile>
+  <app-resume></app-resume>
+  <app-services></app-services>
+  <app-footer></app-footer>
 </div>
+
