--- a/src/app/home/headline/headline.component.html
+++ b/src/app/home/headline/headline.component.html
@@ -1,11 +1,13 @@
-<section class="module-header full-height parallax bg-dark text-center bg-gradient" id="home" >
+<section class="module-header full-height parallax bg-dark bg-dark-30" data-jarallax-video="https://www.youtube.com/watch?v=vNrZTCmtAos" id="home">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h1 class="h1 m-b-15 ">Simon<br/> Rowe</h1>
-        <h1 class="h6 m-b-40">Visual designer & Front-end developer</h1>
-        <p class="m-b-80"><a class="btn btn-brand" href="#"><span>Download resume</span></a></p><img src="assets/images/iphone-5.png" alt="">
+        <h1 class="h1 m-b-15">Simon Rowe</h1>
+        <h1 class="h5">Agile Software Developer – Utilising Java, Spring, Angular & AWS to architect and deliver enterprise software solutions</h1>
       </div>
     </div>
+  </div>
+  <div class="mouse-icon">
+    <div class="wheel"></div>
   </div>
 </section>
