--- a/src/app/home/headline/headline.component.html
+++ b/src/app/home/headline/headline.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-md-12">
         <h1 class="h1 m-b-15">Simon Rowe</h1>
-        <h1 class="h5">Agile Software Developer – Utilising Java, Spring, Angular & AWS to architect and deliver enterprise software solutions</h1>
+        <h1 class="h5">Software Engineer</h1>
       </div>
     </div>
   </div>
