--- a/src/app/home/resume/resume.component.html
+++ b/src/app/home/resume/resume.component.html
@@ -14,7 +14,7 @@
           <li>
             <div class="timeline-badge"></div>
             <div class="timeline-panel">
-              <div class="timeline-preview"><img src="assets/images/features/1.jpg" alt=""></div>
+              <div class="timeline-preview"><img src="assets/images/resume/uon.png" alt=""></div>
               <div class="timeline-body">
                 <h5 class="timeline-title">Computer science</h5>
                 <h6 class="timeline-description">Stanford University | 1998 - 2004</h6>
@@ -25,7 +25,7 @@
           <li>
             <div class="timeline-badge"></div>
             <div class="timeline-panel">
-              <div class="timeline-preview"><img src="assets/images/features/2.jpg" alt=""></div>
+              <div class="timeline-preview"><img src="assets/images/resume/civica.jpg" alt=""></div>
               <div class="timeline-body">
                 <h5 class="timeline-title">Visual designer</h5>
                 <h6 class="timeline-description">Stanford University | 2004 - 2008</h6>
@@ -36,7 +36,19 @@
           <li>
             <div class="timeline-badge"></div>
             <div class="timeline-panel">
-              <div class="timeline-preview"><img src="assets/images/features/3.jpg" alt=""></div>
+              <div class="timeline-preview"><img src="assets/images/resume/sas.png" alt=""></div>
+              <div class="timeline-body">
+                <h5 class="timeline-title">Frontend-developer</h5>
+                <h6 class="timeline-description">Design Corporation | 2008 - 2012</h6>
+                <p>Map where your photos were taken and discover local points of interest. Map where your photos. Map where your photos were taken and discover local points of interest.</p>
+                <p>Another paragraph</p>
+              </div>
+
+            </div>
+          </li>
+          <li>
+            <div class="timeline-badge"></div>
+            <div class="timeline-panel">
               <div class="timeline-body">
                 <h5 class="timeline-title">Frontend-developer</h5>
                 <h6 class="timeline-description">Design Corporation | 2008 - 2012</h6>
@@ -47,7 +59,29 @@
           <li>
             <div class="timeline-badge"></div>
             <div class="timeline-panel">
-              <div class="timeline-preview"><img src="assets/images/features/4.jpg" alt=""></div>
+              <div class="timeline-preview"><img src="assets/images/resume/macquarie.png" alt=""></div>
+              <div class="timeline-body">
+                <h5 class="timeline-title">Lead Developer</h5>
+                <h6 class="timeline-description">Creative Design Studio | 2012 - 2017</h6>
+                <p>Map where your photos were taken and discover local points of interest. Map where your photos. Map where your photos were taken and discover local points of interest.</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="timeline-badge"></div>
+            <div class="timeline-panel">
+              <div class="timeline-preview"><img src="assets/images/resume/workcover.jpg" alt=""></div>
+              <div class="timeline-body">
+                <h5 class="timeline-title">Lead Developer</h5>
+                <h6 class="timeline-description">Creative Design Studio | 2012 - 2017</h6>
+                <p>Map where your photos were taken and discover local points of interest. Map where your photos. Map where your photos were taken and discover local points of interest.</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="timeline-badge"></div>
+            <div class="timeline-panel">
+              <div class="timeline-preview"><img src="assets/images/resume/umpg.png" alt=""></div>
               <div class="timeline-body">
                 <h5 class="timeline-title">Lead Developer</h5>
                 <h6 class="timeline-description">Creative Design Studio | 2012 - 2017</h6>
