--- a/src/assets/css/template.css
+++ b/src/assets/css/template.css
@@ -4130,3 +4130,35 @@ a[rel~="gallery"]:hover {
 .bg-gradient {
     color: #fff;
 }
+
+.widget-social li a {
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+}
+
+.widget-social {
+  padding: 0;
+  margin: 0;
+}
+
+.widget-social li {
+  display: inline-block;
+  margin-right: 5px;
+}
+
+.widget-social li a {
+  background: #2e2e2e;
+  text-align: center;
+  display: block;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  font-size: 1.25em;
+  color: #FFF;
+}
+
+.widget-social li a:hover {
+  background: #EF4836;
+}
