--- a/src/app/home/footer/footer.component.html
+++ b/src/app/home/footer/footer.component.html
@@ -1,7 +1,13 @@
 <footer class="footer">
   <div class="container">
     <div class="row align-items-center">
-      <div class="col-md-6"><span class="copyright">© 2017 <a href="#">2theme</a>, All Rights Reserved.</span></div>
+      <div class="col-md-6"><span class="copyright">© 2018 <a href="#">simonjamesrowe.com</a>, All Rights Reserved.</span></div>
+      <div class="col-md-6">
+        <ul class="social-icons">
+          <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
+          <li><a href="#"><i class="fa fa-github-square"></i></a></li>
+        </ul>
+      </div>
     </div>
   </div>
 </footer>
