--- a/src/app/home/profile/profile.component.html
+++ b/src/app/home/profile/profile.component.html
@@ -3,19 +3,27 @@
   <div class="row">
     <div class="col-md-12">
       <div class="m-title c-align">
-        <h2>Daniel Raleway</h2>
-        <h6>Visual Designer & Front-end Developer</h6>
+        <h2>Simon Rowe</h2>
+        <h6>Agile Software Engineer – Utilising Java, Spring, Angular & AWS to architect and deliver enterprise software solutions</h6>
       </div>
     </div>
   </div>
   <div class="row">
     <div class="col-md-4">
-      <p><img src="assets/images/im.jpg" alt=""></p>
+      <p><img src="assets/images/simon.jpg" alt=""></p>
     </div>
     <div class="col-md-4">
       <h5>Profesional Profile</h5>
       <p>Map where your photos were taken and discover local points of interest. Map where your photos. Map where your photos were taken and discover local points of interest. Map where your photos.</p>
       <p>Map where your photos were taken and discover local points of interest. Map where your photos. Map where your photos were taken and discover local points of interest. Map where your photos.</p>
+
+      <div class="profile-widget">
+        <h5>Social Profiles</h5>
+        <ul class="widget-social">
+          <li><a href="#"><i class="fa fa-github-alt"></i></a></li>
+          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+        </ul>
+      </div>
     </div>
     <div class="col-md-4">
       <h5>My Skills</h5>
