--- a/src/app/home/headline/headline.component.html
+++ b/src/app/home/headline/headline.component.html
@@ -1,4 +1,4 @@
-<section class="module-header full-height parallax bg-dark bg-dark-30" data-jarallax-video="https://www.youtube.com/watch?v=vNrZTCmtAos" id="home">
+<section class="module-header full-height parallax bg-dark bg-dark-30 d-none d-sm-block" data-jarallax-video="https://www.youtube.com/watch?v=vNrZTCmtAos" id="home">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
