More content updates

--- a/src/app/home/profile/profile.component.html
+++ b/src/app/home/profile/profile.component.html
@@ -14,7 +14,7 @@
     </div>
     <div class="col-md-4">
       <h5>Profesional Profile</h5>
-     <p>I am driven to achieve real business value in the shortest time possible through the power of scalable software, utilizing open source technologies.
+     <p>I am driven to achieve real business value in the shortest time possible through the power of scalable software, utilizing open source technologies, mainly surrounding java and the spring framework.
      </p><p>
       With over 13 years of developing, architecting and running java based web applications, my professional experience has spanned many industries from investment banking to media, across multiple countries. My mantra stays the same – keep it simple! Nobody benefits from complicated out of hours releases of monoliths, inherent with risks.
     </p><p>
@@ -24,8 +24,8 @@
       <div class="profile-widget">
         <h5>Social Profiles</h5>
         <ul class="widget-social">
-          <li><a href="#"><i class="fab fa-github-square fa-lg"></i></a></li>
-          <li><a href="#"><i class="fab fa-linkedin fa-lg"></i></a></li>
+          <li><a target="_blank" href=""><i class="fab fa-github-square fa-lg"></i></a></li>
+          <li><a target="_blank" href="https://www.linkedin.com/in/simon-rowe-2a94ab1/"><i class="fab fa-linkedin fa-lg"></i></a></li>
         </ul>
       </div>
     </div>
