--- a/src/app/home/services/services.component.html
+++ b/src/app/home/services/services.component.html
@@ -3,12 +3,12 @@
     <div class="row">
       <div class="col-md-4">
         <div class="icon-box">
-          <div class="icon-box-icon"><span class="icon-telescope"></span></div>
+          <div class="icon-box-icon"><span class="icon-cloud"></span></div>
           <div class="icon-box-title">
-            <h5>Free Plugins</h5>
+            <h5>AWS Certified Developer</h5>
           </div>
           <div class="icon-box-content">
-            <p>Foundry offers you the modularity and ease-of-use of a template with the style and aesthetic of contemporary, bespoke web design.</p>
+            <p>Gaining certification </p>
           </div>
         </div>
       </div>
