--- a/src/app/home/resume/resume.component.html
+++ b/src/app/home/resume/resume.component.html
@@ -82,7 +82,7 @@
               <div class="timeline-body">
                 <h5 class="timeline-title">Graduate Developer</h5>
                 <h6 class="timeline-description">Civica | Jan 2005 - Sep 2006</h6>
-                <p>>Design, Development, Testing and Documentation of the Authority application.
+                <p>Design, Development, Testing and Documentation of the Authority application.
                 </p><p>3rd Level Support &amp; Maintenance duties.
                 </p><p>Technologies Used: Java, JEE, Informix 4GL, Informix, Oracle, SQL Server, VBA, Crystal
                 Reports</p>
