--- a/src/app/home/resume/resume.component.html
+++ b/src/app/home/resume/resume.component.html
@@ -65,7 +65,7 @@
               <div class="timeline-preview"><img src="assets/images/resume/sas.png" alt=""></div>
               <div class="timeline-body">
                 <h5 class="timeline-title">Junior Applications Developer</h5>
-                <h6 class="timeline-description">SAS Asia PAcific | Oct 2006 - Feb 2008 </h6>
+                <h6 class="timeline-description">SAS Asia Pacific | Oct 2006 - Feb 2008 </h6>
                 <p>Design, Development, Testing and Documentation of the Synapse internal business
                   software.</p>
                 <p>3rd Level Support</p>
