--- a/src/app/home/resume/resume.component.html
+++ b/src/app/home/resume/resume.component.html
@@ -17,13 +17,13 @@
               <div class="timeline-preview"><img src="assets/images/resume/umpg.png" alt=""></div>
               <div class="timeline-body">
                 <h5 class="timeline-title">Director, Java Development</h5>
-                <h6 class="timeline-description">Universal Music Publishing  | Jul 2011 - Present </h6>
+                <h6 class="timeline-description">Universal Music Publishing | Jul 2011 - Present </h6>
                 <p>Responsible for architecture and delivery of greenfield internal and public facing business applications. Super scrum master, removing obstacles for four dynamic scrum teams. Frequent commiter. </p>
                 <p>Re-architecture of multiple monoliths with single points of failure to AWS,
                 resulting in scalable, fault tolerant software reducing the operational cost significantly.
                 </p>
-                <p>Introduced automated testing as a development activity utilising technologies such as cucumber, selenium, docker, jenkins which allows for far shorter release cycles.</p>
-                <p>Designed UMPG's first 'serverless' application at AWS, Utilising ECS Fargate, Lambda, SQS, SNS, ElasticSearch, S3. </p>
+                <p>Introduced automated testing as a development activity utilising technologies such as cucumber, selenium, docker which allows for far shorter release cycles.</p>
+                <p>Designed the company's first 'serverless' application at AWS, Utilising ECS Fargate, Lambda, SQS, SNS, ElasticSearch, S3. </p>
               </div>
             </div>
           </li>
