--- a/src/app/home/services/services.component.html
+++ b/src/app/home/services/services.component.html
@@ -5,7 +5,7 @@
         <div class="icon-box">
           <div class="icon-box-icon"><span class="icon-cloud"></span></div>
           <div class="icon-box-title">
-            <h5>AWS Certified Developer</h5>
+            <h5>Cloud</h5>
           </div>
           <div class="icon-box-content">
             <p>Gaining certification </p>
@@ -14,20 +14,9 @@
       </div>
       <div class="col-md-4">
         <div class="icon-box">
-          <div class="icon-box-icon"><span class="icon-mobile"></span></div>
+          <div class="icon-box-icon"><span class="icon-adjustments"></span></div>
           <div class="icon-box-title">
-            <h5>Fully Responsive</h5>
-          </div>
-          <div class="icon-box-content">
-            <p>Foundry offers you the modularity and ease-of-use of a template with the style and aesthetic of contemporary, bespoke web design.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="icon-box">
-          <div class="icon-box-icon"><span class="icon-chat"></span></div>
-          <div class="icon-box-title">
-            <h5>Friendly Support</h5>
+            <h5>Continuous Integration</h5>
           </div>
           <div class="icon-box-content">
             <p>Foundry offers you the modularity and ease-of-use of a template with the style and aesthetic of contemporary, bespoke web design.</p>
@@ -38,7 +27,7 @@
         <div class="icon-box">
           <div class="icon-box-icon"><span class="icon-gears"></span></div>
           <div class="icon-box-title">
-            <h5>Unlimited Colors</h5>
+            <h5>Spring Framework</h5>
           </div>
           <div class="icon-box-content">
             <p>Foundry offers you the modularity and ease-of-use of a template with the style and aesthetic of contemporary, bespoke web design.</p>
@@ -47,9 +36,9 @@
       </div>
       <div class="col-md-4">
         <div class="icon-box">
-          <div class="icon-box-icon"><span class="icon-strategy"></span></div>
+          <div class="icon-box-icon"><span class="icon-scope"></span></div>
           <div class="icon-box-title">
-            <h5>Unlimited Headers</h5>
+            <h5>Scrum</h5>
           </div>
           <div class="icon-box-content">
             <p>Foundry offers you the modularity and ease-of-use of a template with the style and aesthetic of contemporary, bespoke web design.</p>
@@ -60,7 +49,18 @@
         <div class="icon-box">
           <div class="icon-box-icon"><span class="icon-linegraph"></span></div>
           <div class="icon-box-title">
-            <h5>Google Web Fonts</h5>
+            <h5>Search</h5>
+          </div>
+          <div class="icon-box-content">
+            <p>Foundry offers you the modularity and ease-of-use of a template with the style and aesthetic of contemporary, bespoke web design.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="icon-box">
+          <div class="icon-box-icon"><span class="icon-desktop"></span></div>
+          <div class="icon-box-title">
+            <h5>Front End Development</h5>
           </div>
           <div class="icon-box-content">
             <p>Foundry offers you the modularity and ease-of-use of a template with the style and aesthetic of contemporary, bespoke web design.</p>
