more changes to allow activity with web services and also with google oauth

--- a/src/app/home/header/header/header.component.html
+++ b/src/app/home/header/header/header.component.html
@@ -8,7 +8,8 @@
           <li><a href="#home" (click)="isNavbarCollapsed = !isNavbarCollapsed"><span class="menu-item-span">Home</span></a></li>
           <li><a href="#profile" (click)="isNavbarCollapsed = !isNavbarCollapsed"><span class="menu-item-span">Profile</span></a></li>
           <li><a href="#resume" (click)="isNavbarCollapsed = !isNavbarCollapsed"><span class="menu-item-span">Resume</span></a></li>
-         </ul>
+          <app-login [user]="user"></app-login>
+        </ul>
       </div>
     </div>
     <!-- Mobile menu-->
