--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -4,10 +4,10 @@
   </div>
 </div>
 
-<app-header></app-header>
+<app-header [user]="user"></app-header>
 <div class="wrapper">
   <app-headline></app-headline>
-  <app-profile></app-profile>
+  <app-profile [user]="user"></app-profile>
   <app-resume></app-resume>
   <app-footer></app-footer>
 </div>
