--- a/src/app/home/profile/profile.component.html
+++ b/src/app/home/profile/profile.component.html
@@ -4,7 +4,7 @@
     <div class="col-md-12">
       <div class="m-title c-align">
         <h2>Simon Rowe</h2>
-        <h6>Agile Software Engineer – Utilising Java, Spring, Angular & AWS to architect and deliver enterprise software solutions</h6>
+        <h6>Agile Software Engineer – Utilising Java, Spring, Angular & AWS to architect and deliver enterprise software solutions <i *ngIf="canEdit()" class="fas fa-edit"></i></h6>
       </div>
     </div>
   </div>
