--- a/src/app/home/header/header/header.component.html
+++ b/src/app/home/header/header/header.component.html
@@ -5,11 +5,11 @@
     <div class="inner-navigation collapse" [ngbCollapse]="isNavbarCollapsed">
       <div class="inner-nav onepage-nav" id="navbarContent">
         <ul>
-          <li *ngIf="canKill()"><a href="#home" (click)="isNavbarCollapsed = !isNavbarCollapsed;kill()"><span class="menu-item-span">Kill Switch</span></a></li>
           <li><a href="#home" (click)="isNavbarCollapsed = !isNavbarCollapsed"><span class="menu-item-span">Home</span></a></li>
           <li><a href="#profile" (click)="isNavbarCollapsed = !isNavbarCollapsed"><span class="menu-item-span">Profile</span></a></li>
           <li><a href="#resume" (click)="isNavbarCollapsed = !isNavbarCollapsed"><span class="menu-item-span">Resume</span></a></li>
-          <app-login [user]="user"></app-login>
+          <li *ngIf="!authenticated()"><a href="#" (click)="isNavbarCollapsed = !isNavbarCollapsed;login()"><span class="menu-item-span">Login</span></a></li>
+          <li *ngIf="authenticated()"><a href="#" (click)="isNavbarCollapsed = !isNavbarCollapsed;logout()"><span class="menu-item-span">Logout</span></a></li>
         </ul>
       </div>
     </div>
