--- a/src/app/home/profile/headline/headline.component.html
+++ b/src/app/home/profile/headline/headline.component.html
@@ -1,4 +1,4 @@
-<ngb-alert *ngIf="headlineSuccessMessage" type="success" (close)="headlineSuccessMessage = null">{{ headlineSuccessMessage }}</ngb-alert>
+<app-alert [alertSubject]="alert"></app-alert>
 <div class="m-title c-align">
   <h2>Simon Rowe</h2>
   <h6 [hidden]="headlineEdit">{{headline.headline}} <i *ngIf="canEdit()" class="fas fa-edit" (click)="toggleHeadlineEdit()"></i></h6>
